Data/meow/testerrors_subtree_file.log
6
/data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/is-core-module/index.js:68
	return has(data, x) && versionIncluded(nodeVersion, data[x]);
	       ^

TypeError: has is not a function
    at isCore (/data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/is-core-module/index.js:68:9)
    at Object.fixNameField (/data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/normalize-package-data/lib/fixer.js:232:9)
    at /data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/normalize-package-data/lib/normalize.js:41:38
    at Array.forEach (<anonymous>)
    at normalize (/data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/normalize-package-data/lib/normalize.js:40:15)
    at meow (file:///data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/xo/node_modules/meow/index.js:181:2)
    at file:///data/js-variants/multee/VariantsSubtree/meow/variant5/meow/node_modules/xo/cli.js:10:13
    at ModuleJob.run (node:internal/modules/esm/module_job:193:25)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:533:24)
file:///data/js-variants/multee/VariantsSubtree/meow/variant2/meow/node_modules/redent/index.js:2
import indentString from 'indent-string';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'indent-string' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:189:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:533:24)
    at async loadESM (node:internal/process/esm_loader:91:5)
    at async handleMainPromise (node:internal/modules/run_main:65:12)
file:///data/js-variants/multee/VariantsSubtree/meow/variant1/meow/node_modules/xo/node_modules/meow/index.js:9
import trimNewlines from 'trim-newlines';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'trim-newlines' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:189:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:533:24)
    at async loadESM (node:internal/process/esm_loader:91:5)
    at async handleMainPromise (node:internal/modules/run_main:65:12)
